$Id$

version 1.10.0rc3 Urgo (2007-09-10):

  - genfake: fixed problem with data limit field in tariffs (alec)
  - customers list: optimized sql query (alec)
  - excluded groups: works with transfer forms and pdf invoices (alec)
  - lmsd/dns: fixed bug in dns.c - added lost strdup() (alec)
  - helpdesk: fixed attachments removing when deleting tickets and 
    messages (alec)
  - new invoice settlement date checking takes numbering plan into 
    consideration (alec)

version 1.10.0rc2 Urgo (2007-08-27):

  - fixed bug in DeleteNode() (alec)
  - fixes in config reload, now at least one host is required (alec)
  - contrib/formularz_przelewu_wplaty: fixed css vulnerability, also
    configuration is readed from database and can be set in UI (alec) 
  - don't show excluded groups on filters (alec)
  - excluded groups: works on modules from Finances (alec)
  - in Finances -> Raports -> Transfer forms balance value can be entered
    with . or , sign (alec)
  - invoices list: fixed sorting by items count (alec)
  - fixed customers moving from one tariff to other (alec)
  - fixed sql query in Mailing (alec)
  - fixed device's IP removing (alec)

version 1.10.0rc1 Urgo (2007-08-17):

  - common pdf functions and initialization moved to lib/pdf.php (alec)
  - lms-reminder: BTS#0000670 - fixed query (alec)
  - Excluded groups - possibility to disable user access to specified
    customers groups (alec)
    *****************************************************************
  - PostgreSQL 8.1 is required now (alec)
	!!!! postgresql.conf: custom_variable_classes = 'lms'
    *****************************************************************
  - cash import: when customer is known don't show selection field,
    added $modvalue configuration variable, code cleanup, transactions
    support (alec)
  - when customer wasn't found in quick customer search do redirect to 
    customer search module with filled zip and city fields  (alec)